--- a/Colab_version.ipynb
+++ b/Colab_version.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJrMIZQ5akJ/Tpg5/3yARZ",
+      "authorship_tag": "ABX9TyO1EPDzPYW0fDcRzEqpy/81",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMjKdkHdlpDo",
-        "outputId": "6fbee831-7337-4fbc-bcbe-8f1c89d9e2d4"
+        "outputId": "edd43776-05ba-4f95-8ff9-c9e04eb0f146"
       },
       "outputs": [
         {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "kOhM8hbAZ2Ko"
       },
-      "execution_count": 118,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "ju1gMoUpbq2b"
       },
-      "execution_count": 119,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -225,18 +225,18 @@
       ],
       "metadata": {
         "id": "KE2pPmGchFHY",
-        "outputId": "9c601690-a35e-46a5-c292-399258b2c6d9",
+        "outputId": "1529be7b-d5dc-47f6-8f24-5f8a5abfbb22",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 136,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-136-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-5-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('train.csv')\n"
           ]
         }
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "WguzR0M5JCN2"
       },
-      "execution_count": 137,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "egV2666vdubL"
       },
-      "execution_count": 138,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "5mGwN3CfX7o2"
       },
-      "execution_count": 139,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "UmE4U4i3YbOR"
       },
-      "execution_count": 140,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "1_pZv78LZK8t"
       },
-      "execution_count": 141,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "BvVsi9wVFQl5"
       },
-      "execution_count": 142,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -359,7 +359,7 @@
       "metadata": {
         "id": "aAwx1KGiCa4D"
       },
-      "execution_count": 143,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
       "metadata": {
         "id": "p0oIPYMgC3qG"
       },
-      "execution_count": 144,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
       "metadata": {
         "id": "v9J6yjErhWlq"
       },
-      "execution_count": 145,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "q6y9pX3XJ9ED"
       },
-      "execution_count": 146,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "CdAC3mv0LNxU"
       },
-      "execution_count": 147,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -453,118 +453,67 @@
       "metadata": {
         "id": "diV5Pq4UYqID"
       },
-      "execution_count": 148,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Check NaN in X_Train\n",
+        "# convert categorical values to lables in all 3 dataframes\n",
         "\n",
-        "X_train.isna().sum()"
+        "import pandas as pd\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "\n",
+        "# Identify the categorical columns\n",
+        "categorical_cols = X_train.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+        "\n",
+        "# Create the column transformer with OneHotEncoder\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_cols)\n",
+        "    ],\n",
+        "    remainder='passthrough'\n",
+        ")\n",
+        "\n",
+        "# Fit the preprocessor on X_train and transform all dataframes\n",
+        "X_train_transformed = preprocessor.fit_transform(X_train)\n",
+        "X_test_transformed = preprocessor.transform(X_test)\n",
+        "df_valid_transformed = preprocessor.transform(df_valid)\n",
+        "\n",
+        "# Convert transformed arrays back to dataframes with proper column names\n",
+        "X_train_transformed = pd.DataFrame(X_train_transformed, columns=preprocessor.get_feature_names_out())\n",
+        "X_test_transformed = pd.DataFrame(X_test_transformed, columns=preprocessor.get_feature_names_out())\n",
+        "df_valid_transformed = pd.DataFrame(df_valid_transformed, columns=preprocessor.get_feature_names_out())\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "l7rdeP_BK7W3",
-        "outputId": "8237a21c-4bb3-4b47-c808-ad9a309fed90",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "EkpKPP10PZpO"
       },
-      "execution_count": 149,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "SalesID                       0\n",
-              "ModelID                       0\n",
-              "datasource                    0\n",
-              "auctioneerID                  0\n",
-              "MachineHoursCurrentMeter      0\n",
-              "UsageBand                     0\n",
-              "saledate                      0\n",
-              "fiModelDesc                   0\n",
-              "fiBaseModel                   0\n",
-              "fiSecondaryDesc               0\n",
-              "fiModelSeries                 0\n",
-              "fiModelDescriptor             0\n",
-              "ProductSize                   0\n",
-              "fiProductClassDesc            0\n",
-              "state                         0\n",
-              "ProductGroup                  0\n",
-              "Drive_System                  0\n",
-              "Enclosure                     0\n",
-              "Forks                         0\n",
-              "Pad_Type                      0\n",
-              "Ride_Control                  0\n",
-              "Stick                         0\n",
-              "Transmission                  0\n",
-              "Turbocharged                  0\n",
-              "Blade_Extension               0\n",
-              "Blade_Width                   0\n",
-              "Enclosure_Type                0\n",
-              "Engine_Horsepower             0\n",
-              "Hydraulics                    0\n",
-              "Pushblock                     0\n",
-              "Ripper                        0\n",
-              "Scarifier                     0\n",
-              "Tip_Control                   0\n",
-              "Tire_Size                     0\n",
-              "Coupler                       0\n",
-              "Coupler_System                0\n",
-              "Grouser_Tracks                0\n",
-              "Hydraulics_Flow               0\n",
-              "Track_Type                    0\n",
-              "Undercarriage_Pad_Width       0\n",
-              "Stick_Length                  0\n",
-              "Thumb                         0\n",
-              "Pattern_Changer               0\n",
-              "Grouser_Type                  0\n",
-              "Backhoe_Mounting              0\n",
-              "Blade_Type                    0\n",
-              "Travel_Controls               0\n",
-              "Differential_Type             0\n",
-              "Steering_Controls             0\n",
-              "Age                           0\n",
-              "ProductClassCharacteristic    0\n",
-              "TimesAppearing                0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 149
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = train_and_evaluate_model(X_train, X_test, y_train, y_test, [15], -1, 20,\n",
-        "                                 0.5)"
+        "model = RandomForestClassifier(random_state=42)\n",
+        "model.fit(X_train_transformed, y_train)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "y_test_pred = model.predict(X_test_transformed)\n",
+        "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+        "print(f\"Test Accuracy: {test_accuracy}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "STyicTQ2aGIx",
-        "outputId": "5bb563d5-42f8-4f7d-f76c-3af50fc6cbc1"
+        "id": "-4JPXcR2TBj9"
       },
-      "execution_count": 150,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fitting the model...\n",
-            "Testing the model...\n",
-            "Tree depth - 15\n",
-            "STD Test - 22995.709788960918\n",
-            "STD Train - 23054.44179044156\n",
-            "RMSE Test - 12747.583073222002\n",
-            "RMSE Train - 8734.391293253819\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
