--- a/Colab_version.ipynb
+++ b/Colab_version.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1EPDzPYW0fDcRzEqpy/81",
+      "authorship_tag": "ABX9TyPgP/cG1XDylEZhPMf4R3Db",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMjKdkHdlpDo",
-        "outputId": "edd43776-05ba-4f95-8ff9-c9e04eb0f146"
+        "outputId": "bf33b32f-1666-44cf-b849-2552c627efc3"
       },
       "outputs": [
         {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "kOhM8hbAZ2Ko"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "ju1gMoUpbq2b"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -225,18 +225,18 @@
       ],
       "metadata": {
         "id": "KE2pPmGchFHY",
-        "outputId": "1529be7b-d5dc-47f6-8f24-5f8a5abfbb22",
+        "outputId": "4c67c5ed-ad45-4a77-e43e-567d5044ccd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-5-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-4-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('train.csv')\n"
           ]
         }
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "WguzR0M5JCN2"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "egV2666vdubL"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "5mGwN3CfX7o2"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "UmE4U4i3YbOR"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "1_pZv78LZK8t"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "BvVsi9wVFQl5"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -359,7 +359,7 @@
       "metadata": {
         "id": "aAwx1KGiCa4D"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
       "metadata": {
         "id": "p0oIPYMgC3qG"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
       "metadata": {
         "id": "v9J6yjErhWlq"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "q6y9pX3XJ9ED"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "CdAC3mv0LNxU"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -453,14 +453,13 @@
       "metadata": {
         "id": "diV5Pq4UYqID"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# convert categorical values to lables in all 3 dataframes\n",
-        "\n",
         "import pandas as pd\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
@@ -468,8 +467,6 @@
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "\n",
-        "# Identify the categorical columns\n",
         "categorical_cols = X_train.select_dtypes(include=['object', 'category']).columns.tolist()\n",
         "\n",
         "# Create the column transformer with OneHotEncoder\n",
@@ -483,34 +480,58 @@
         "# Fit the preprocessor on X_train and transform all dataframes\n",
         "X_train_transformed = preprocessor.fit_transform(X_train)\n",
         "X_test_transformed = preprocessor.transform(X_test)\n",
-        "df_valid_transformed = preprocessor.transform(df_valid)\n",
+        "X_valid_transformed = preprocessor.transform(df_valid)\n",
         "\n",
         "# Convert transformed arrays back to dataframes with proper column names\n",
         "X_train_transformed = pd.DataFrame(X_train_transformed, columns=preprocessor.get_feature_names_out())\n",
         "X_test_transformed = pd.DataFrame(X_test_transformed, columns=preprocessor.get_feature_names_out())\n",
-        "df_valid_transformed = pd.DataFrame(df_valid_transformed, columns=preprocessor.get_feature_names_out())\n",
-        "\n",
-        "\n"
+        "X_valid_transformed = pd.DataFrame(X_valid_transformed, columns=preprocessor.get_feature_names_out())"
       ],
       "metadata": {
         "id": "EkpKPP10PZpO"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = RandomForestClassifier(random_state=42)\n",
-        "model.fit(X_train_transformed, y_train)\n",
-        "\n",
-        "# Evaluate the model\n",
-        "y_test_pred = model.predict(X_test_transformed)\n",
-        "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-        "print(f\"Test Accuracy: {test_accuracy}\")"
+        "# Train model\n",
+        "model = train_and_evaluate_model(X_train_transformed, X_test_transformed, y_train, y_test, [16],\n",
+        "                                 -1, 20, 0.9)"
       ],
       "metadata": {
-        "id": "-4JPXcR2TBj9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-4JPXcR2TBj9",
+        "outputId": "f11955cb-48ec-44e9-e405-a1bc37194c5f"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting the model...\n",
+            "Testing the model...\n",
+            "Tree depth - 16\n",
+            "STD Test - 22995.709788960918\n",
+            "STD Train - 23054.44179044156\n",
+            "RMSE Test - 17472.172461601975\n",
+            "RMSE Train - 8030.635005842969\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use Model\n",
+        "y_valid_pred = model.predict(X_valid_transformed)"
+      ],
+      "metadata": {
+        "id": "79BH6lGfUCYr"
       },
       "execution_count": null,
       "outputs": []
@@ -518,9 +539,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X_valid = df_valid\n",
-        "y_valid_pred = model.predict(X_valid)\n",
-        "\n",
         "# Create the prediction DataFrame with only 'SalesID' and 'Predicted_SalePrice'\n",
         "df_predictions = pd.DataFrame({\n",
         "    'SalesID': df_valid['SalesID'],\n",
@@ -635,66 +653,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5gstA97Hb3D_",
-        "outputId": "804ec6bb-4a7c-425b-ef34-bf495b6ad531"
+        "outputId": "485e7c22-962f-43e9-a7bd-a2cad3a35a63"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Age: 0.19937407506585206\n",
-            "ProductSize: 0.10691889839352231\n",
-            "SalesID: 0.08207153754382275\n",
-            "ModelID: 0.07300923476058667\n",
-            "ProductClassCharacteristic: 0.05319805945419628\n",
-            "fiSecondaryDesc: 0.05011915152936151\n",
-            "fiModelDesc: 0.04547696431017013\n",
-            "fiProductClassDesc: 0.04328313362428725\n",
-            "fiBaseModel: 0.03834234202871468\n",
-            "fiModelDescriptor: 0.03582192624646638\n",
-            "saledate: 0.030655716543375417\n",
-            "state: 0.020760749250534297\n",
-            "ProductGroup: 0.020564596106261848\n",
-            "Tire_Size: 0.016754501107996818\n",
-            "Enclosure: 0.015835870041758633\n",
-            "auctioneerID: 0.015216829140987745\n",
-            "MachineHoursCurrentMeter: 0.014636762750531834\n",
-            "Drive_System: 0.013355963856597172\n",
-            "Pad_Type: 0.012103941017270674\n",
-            "Coupler_System: 0.011823749254768676\n",
-            "Track_Type: 0.011386670539874175\n",
-            "datasource: 0.009893314497543201\n",
-            "Ripper: 0.007958961846226305\n",
-            "fiModelSeries: 0.007183775188782225\n",
-            "Hydraulics: 0.007051763375061887\n",
-            "Forks: 0.007007770072411807\n",
-            "TimesAppearing: 0.005472211436897077\n",
-            "Grouser_Tracks: 0.005382902937514509\n",
-            "Ride_Control: 0.005382876577428912\n",
-            "Coupler: 0.004056127048041624\n",
-            "Transmission: 0.0036322636344376666\n",
-            "UsageBand: 0.0033172911644542467\n",
-            "Tip_Control: 0.0027230675592378175\n",
-            "Thumb: 0.002469143192867553\n",
-            "Stick_Length: 0.0023866570175304995\n",
-            "Pattern_Changer: 0.0019666347573236097\n",
-            "Blade_Type: 0.0018466073462820663\n",
-            "Undercarriage_Pad_Width: 0.0018296051037440704\n",
-            "Steering_Controls: 0.001772707070315651\n",
-            "Travel_Controls: 0.001373393401621054\n",
-            "Hydraulics_Flow: 0.0012659624834784181\n",
-            "Grouser_Type: 0.0008978150102486539\n",
-            "Stick: 0.0007170043777007639\n",
-            "Pushblock: 0.0007120221361205474\n",
-            "Blade_Width: 0.000607504704538145\n",
-            "Turbocharged: 0.000598692162768797\n",
-            "Scarifier: 0.0005922335030307752\n",
-            "Backhoe_Mounting: 0.00032136034685929256\n",
-            "Engine_Horsepower: 0.00029028341062870553\n",
-            "Differential_Type: 0.00024277825665680776\n",
-            "Blade_Extension: 0.0002264723669610403\n",
-            "Enclosure_Type: 0.00011012544634903646\n"
+            "Age: 0.23749700689228145\n",
+            "ProductSize: 0.23449634626845442\n",
+            "SalesID: 0.06690709687534345\n",
+            "ModelID: 0.06571051972226238\n",
+            "fiBaseModel: 0.06427993379022544\n",
+            "fiModelDesc: 0.04090431034546565\n",
+            "Enclosure: 0.037052397408903065\n",
+            "fiProductClassDesc: 0.0348073903321477\n",
+            "Coupler_System: 0.032273382920517055\n",
+            "fiSecondaryDesc: 0.023885121099773084\n",
+            "Tire_Size: 0.021912482296756505\n",
+            "ProductClassCharacteristic: 0.020680655900391146\n",
+            "fiModelDescriptor: 0.019679573570275603\n",
+            "saledate: 0.014499584886193555\n",
+            "state: 0.00978740484961463\n",
+            "auctioneerID: 0.008860102517245979\n",
+            "Blade_Extension: 0.006903125296805566\n",
+            "MachineHoursCurrentMeter: 0.006075733068392157\n",
+            "Blade_Width: 0.005240817976002786\n",
+            "fiModelSeries: 0.004254969054711673\n",
+            "ProductGroup: 0.003296742685730617\n",
+            "Tip_Control: 0.0029293936487814923\n",
+            "Ripper: 0.002852656880386089\n",
+            "Engine_Horsepower: 0.0027516700766539704\n",
+            "TimesAppearing: 0.002641738658928886\n",
+            "datasource: 0.002531683923902871\n",
+            "UsageBand: 0.0024313256946147626\n",
+            "Travel_Controls: 0.0023893458149674644\n",
+            "Ride_Control: 0.0023861328788374837\n",
+            "Hydraulics_Flow: 0.0021597494678472343\n",
+            "Hydraulics: 0.0017841419897311856\n",
+            "Undercarriage_Pad_Width: 0.001676898294192578\n",
+            "Blade_Type: 0.0016170229893502674\n",
+            "Transmission: 0.00143496510351748\n",
+            "Stick_Length: 0.0014234534066404803\n",
+            "Drive_System: 0.0014070588201213928\n",
+            "Pushblock: 0.0013107600530032869\n",
+            "Grouser_Type: 0.0012042727076345741\n",
+            "Scarifier: 0.0011411311327352367\n",
+            "Coupler: 0.0010570669395599155\n",
+            "Pattern_Changer: 0.0008473731114736611\n",
+            "Pad_Type: 0.0006084548771515533\n",
+            "Thumb: 0.0005764700530827693\n",
+            "Enclosure_Type: 0.0004136853131430477\n",
+            "Forks: 0.00041244245811314367\n",
+            "Backhoe_Mounting: 0.0003392795847003594\n",
+            "Steering_Controls: 0.00020034726288352303\n",
+            "Track_Type: 0.00017221626069488448\n",
+            "Differential_Type: 0.0001521077543101056\n",
+            "Stick: 9.988677187399113e-05\n",
+            "Turbocharged: 3.407153308820986e-05\n",
+            "Grouser_Tracks: 8.498780584296564e-06\n"
           ]
         }
       ]
