--- a/Colab_version.ipynb
+++ b/Colab_version.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgP/cG1XDylEZhPMf4R3Db",
+      "authorship_tag": "ABX9TyO6WyZ0DljeD7zANjHdL4yT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMjKdkHdlpDo",
-        "outputId": "bf33b32f-1666-44cf-b849-2552c627efc3"
+        "outputId": "19b60e8d-1c0b-4b7c-a5c3-fbfcd69806ab"
       },
       "outputs": [
         {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "kOhM8hbAZ2Ko"
       },
-      "execution_count": 2,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "ju1gMoUpbq2b"
       },
-      "execution_count": 3,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -225,18 +225,18 @@
       ],
       "metadata": {
         "id": "KE2pPmGchFHY",
-        "outputId": "4c67c5ed-ad45-4a77-e43e-567d5044ccd6",
+        "outputId": "492e022f-80fd-46e8-a48a-12a34b21970f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-79-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('train.csv')\n"
           ]
         }
@@ -247,20 +247,18 @@
         "# convert 'YearMade' column to 'Age'\n",
         "\n",
         "df['Age'] = 2024 - df['YearMade']\n",
-        "# Clamp 'YearMade' to a reasonable minimum before converting to datetime\n",
-        "#df['AgeAtLastSale'] = pd.to_datetime(df['saledate']) - pd.to_datetime(df['YearMade'].clip(lower=1900), format='%Y')\n",
+        "df['AgeAtLastSale'] = (pd.to_datetime(df['saledate']) - pd.to_datetime(df['YearMade'].clip(lower=1900), format='%Y')).dt.days\n",
         "df.drop('YearMade', axis=1, inplace=True)\n",
         "\n",
         "df_valid['Age'] = 2024 - df_valid['YearMade']\n",
-        "# Clamp 'YearMade' to a reasonable minimum before converting to datetime, and convert 'saledate' to datetime\n",
-        "#df_valid['AgeAtLastSale'] = pd.to_datetime(df_valid['saledate']) - pd.to_datetime(df_valid['YearMade'].clip(lower=1900), format='%Y')\n",
+        "df_valid['AgeAtLastSale'] = (pd.to_datetime(df_valid['saledate']) - pd.to_datetime(df_valid['YearMade'].clip(lower=1900), format='%Y')).dt.days\n",
         "df_valid.drop('YearMade', axis=1, inplace=True)"
       ],
       "cell_type": "code",
       "metadata": {
         "id": "WguzR0M5JCN2"
       },
-      "execution_count": 5,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -274,7 +272,7 @@
       "metadata": {
         "id": "egV2666vdubL"
       },
-      "execution_count": 6,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -291,7 +289,7 @@
       "metadata": {
         "id": "5mGwN3CfX7o2"
       },
-      "execution_count": 7,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -305,34 +303,8 @@
       "metadata": {
         "id": "UmE4U4i3YbOR"
       },
-      "execution_count": 8,
+      "execution_count": 85,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# replace NaN values with 'missing' for non-numeric fields\n",
-        "for col in df.columns:\n",
-        "    if df[col].dtype == 'object':\n",
-        "        df[col].fillna('missing', inplace=True)\n",
-        "\n",
-        "\n",
-        "for col in df_valid.columns:\n",
-        "    if df_valid[col].dtype == 'object':\n",
-        "        df_valid[col].fillna('missing', inplace=True)"
-      ],
-      "metadata": {
-        "id": "1_pZv78LZK8t"
-      },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "wdjNvPLoFZ-Y"
-      }
     },
     {
       "source": [
@@ -345,7 +317,7 @@
       "metadata": {
         "id": "BvVsi9wVFQl5"
       },
-      "execution_count": 10,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -359,7 +331,7 @@
       "metadata": {
         "id": "aAwx1KGiCa4D"
       },
-      "execution_count": 11,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -371,7 +343,7 @@
       "metadata": {
         "id": "p0oIPYMgC3qG"
       },
-      "execution_count": 12,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -387,7 +359,7 @@
       "metadata": {
         "id": "v9J6yjErhWlq"
       },
-      "execution_count": 13,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -403,13 +375,13 @@
       "metadata": {
         "id": "q6y9pX3XJ9ED"
       },
-      "execution_count": 14,
+      "execution_count": 93,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\"\"\" Use replace_nans function in order to replace outliers\n",
+        "\"\"\" Use replace_nans function in order to replace NaN values\n",
         "in the 'MachineHoursCurrentMeter' column using statistics_df and IQR method \"\"\"\n",
         "\n",
         "X_train = replace_nans(X_train, 'MachineHoursCurrentMeter', 'iqr', statistics_df)\n",
@@ -419,7 +391,7 @@
       "metadata": {
         "id": "CdAC3mv0LNxU"
       },
-      "execution_count": 15,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -453,7 +425,7 @@
       "metadata": {
         "id": "diV5Pq4UYqID"
       },
-      "execution_count": 16,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -490,7 +462,7 @@
       "metadata": {
         "id": "EkpKPP10PZpO"
       },
-      "execution_count": 17,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -498,16 +470,16 @@
       "source": [
         "# Train model\n",
         "model = train_and_evaluate_model(X_train_transformed, X_test_transformed, y_train, y_test, [16],\n",
-        "                                 -1, 20, 0.9)"
+        "                                 -1, 20, 0.5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-4JPXcR2TBj9",
-        "outputId": "f11955cb-48ec-44e9-e405-a1bc37194c5f"
+        "outputId": "6abaf807-17f5-46d2-8703-25aff11892d5"
       },
-      "execution_count": 21,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,8 +490,8 @@
             "Tree depth - 16\n",
             "STD Test - 22995.709788960918\n",
             "STD Train - 23054.44179044156\n",
-            "RMSE Test - 17472.172461601975\n",
-            "RMSE Train - 8030.635005842969\n"
+            "RMSE Test - 11573.133611443149\n",
+            "RMSE Train - 6057.5839482426145\n"
           ]
         }
       ]
@@ -533,7 +505,7 @@
       "metadata": {
         "id": "79BH6lGfUCYr"
       },
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -541,7 +513,7 @@
       "source": [
         "# Create the prediction DataFrame with only 'SalesID' and 'Predicted_SalePrice'\n",
         "df_predictions = pd.DataFrame({\n",
-        "    'SalesID': df_valid['SalesID'],\n",
+        "    'SalesID': X_valid_transformed['SalesID'],\n",
         "    'SalePrice': y_valid_pred\n",
         "})\n",
         "df_predictions.to_csv('valid_predictions.csv', index=False)"
@@ -549,7 +521,7 @@
       "metadata": {
         "id": "NGk-DT4zjXkb"
       },
-      "execution_count": 23,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -564,9 +536,9 @@
           "height": 17
         },
         "id": "TKkPGrIJpNCf",
-        "outputId": "55bc5abd-799e-4862-9cac-0d21401c51c7"
+        "outputId": "fdf8d367-3d9c-4502-8e50-cd695fe8ccaf"
       },
-      "execution_count": 24,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
@@ -627,7 +599,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_5664e995-34c5-4a43-b24d-c2d44020bfbc\", \"valid_predictions.csv\", 307813)"
+              "download(\"download_2787cb65-488d-41d2-ae26-8a747b07e58d\", \"valid_predictions.csv\", 305240)"
             ]
           },
           "metadata": {}
@@ -653,66 +625,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5gstA97Hb3D_",
-        "outputId": "485e7c22-962f-43e9-a7bd-a2cad3a35a63"
+        "outputId": "db385713-2186-4d2a-f207-f7ea0ed5ae4a"
       },
-      "execution_count": 22,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Age: 0.23749700689228145\n",
-            "ProductSize: 0.23449634626845442\n",
-            "SalesID: 0.06690709687534345\n",
-            "ModelID: 0.06571051972226238\n",
-            "fiBaseModel: 0.06427993379022544\n",
-            "fiModelDesc: 0.04090431034546565\n",
-            "Enclosure: 0.037052397408903065\n",
-            "fiProductClassDesc: 0.0348073903321477\n",
-            "Coupler_System: 0.032273382920517055\n",
-            "fiSecondaryDesc: 0.023885121099773084\n",
-            "Tire_Size: 0.021912482296756505\n",
-            "ProductClassCharacteristic: 0.020680655900391146\n",
-            "fiModelDescriptor: 0.019679573570275603\n",
-            "saledate: 0.014499584886193555\n",
-            "state: 0.00978740484961463\n",
-            "auctioneerID: 0.008860102517245979\n",
-            "Blade_Extension: 0.006903125296805566\n",
-            "MachineHoursCurrentMeter: 0.006075733068392157\n",
-            "Blade_Width: 0.005240817976002786\n",
-            "fiModelSeries: 0.004254969054711673\n",
-            "ProductGroup: 0.003296742685730617\n",
-            "Tip_Control: 0.0029293936487814923\n",
-            "Ripper: 0.002852656880386089\n",
-            "Engine_Horsepower: 0.0027516700766539704\n",
-            "TimesAppearing: 0.002641738658928886\n",
-            "datasource: 0.002531683923902871\n",
-            "UsageBand: 0.0024313256946147626\n",
-            "Travel_Controls: 0.0023893458149674644\n",
-            "Ride_Control: 0.0023861328788374837\n",
-            "Hydraulics_Flow: 0.0021597494678472343\n",
-            "Hydraulics: 0.0017841419897311856\n",
-            "Undercarriage_Pad_Width: 0.001676898294192578\n",
-            "Blade_Type: 0.0016170229893502674\n",
-            "Transmission: 0.00143496510351748\n",
-            "Stick_Length: 0.0014234534066404803\n",
-            "Drive_System: 0.0014070588201213928\n",
-            "Pushblock: 0.0013107600530032869\n",
-            "Grouser_Type: 0.0012042727076345741\n",
-            "Scarifier: 0.0011411311327352367\n",
-            "Coupler: 0.0010570669395599155\n",
-            "Pattern_Changer: 0.0008473731114736611\n",
-            "Pad_Type: 0.0006084548771515533\n",
-            "Thumb: 0.0005764700530827693\n",
-            "Enclosure_Type: 0.0004136853131430477\n",
-            "Forks: 0.00041244245811314367\n",
-            "Backhoe_Mounting: 0.0003392795847003594\n",
-            "Steering_Controls: 0.00020034726288352303\n",
-            "Track_Type: 0.00017221626069488448\n",
-            "Differential_Type: 0.0001521077543101056\n",
-            "Stick: 9.988677187399113e-05\n",
-            "Turbocharged: 3.407153308820986e-05\n",
-            "Grouser_Tracks: 8.498780584296564e-06\n"
+            "AgeAtLastSale: 0.19799973933897025\n",
+            "ProductSize: 0.18456433912211362\n",
+            "Age: 0.10021552339870568\n",
+            "fiBaseModel: 0.06665314620390204\n",
+            "ModelID: 0.062032727261508006\n",
+            "Enclosure: 0.05932902460296898\n",
+            "fiProductClassDesc: 0.049593214926255\n",
+            "fiModelDesc: 0.04231276728386864\n",
+            "fiSecondaryDesc: 0.03463507852907022\n",
+            "Coupler_System: 0.03062715674315703\n",
+            "ProductClassCharacteristic: 0.030154666622460115\n",
+            "SalesID: 0.01767546463973773\n",
+            "fiModelDescriptor: 0.01579055099517206\n",
+            "Grouser_Tracks: 0.010833819732083156\n",
+            "Tire_Size: 0.009275402600574701\n",
+            "ProductGroup: 0.00842372027153318\n",
+            "Enclosure_Type: 0.0074547381414718904\n",
+            "saledate: 0.005834653788172878\n",
+            "Hydraulics_Flow: 0.005596966099010357\n",
+            "state: 0.004700372195093061\n",
+            "Blade_Width: 0.0046516516541280925\n",
+            "Ripper: 0.004318177286488369\n",
+            "fiModelSeries: 0.004231965967083417\n",
+            "Pushblock: 0.004176817442604224\n",
+            "Hydraulics: 0.003863466317511056\n",
+            "Tip_Control: 0.0031296014216171996\n",
+            "auctioneerID: 0.002851691830721068\n",
+            "MachineHoursCurrentMeter: 0.0022348654203995\n",
+            "Engine_Horsepower: 0.002180121649207222\n",
+            "Travel_Controls: 0.0021197319110980678\n",
+            "Blade_Extension: 0.0020350067705437475\n",
+            "Scarifier: 0.0016214224857216612\n",
+            "Track_Type: 0.0015846162196613066\n",
+            "Drive_System: 0.0015767138776006024\n",
+            "Blade_Type: 0.0015136710884911249\n",
+            "Ride_Control: 0.001484082579060028\n",
+            "TimesAppearing: 0.0012724175858178709\n",
+            "datasource: 0.0012699195923217305\n",
+            "Undercarriage_Pad_Width: 0.0011684973912589815\n",
+            "Stick_Length: 0.0011176277690421415\n",
+            "UsageBand: 0.0010545584801227852\n",
+            "Coupler: 0.0009548192399337609\n",
+            "Transmission: 0.0009384413292148474\n",
+            "Grouser_Type: 0.0008204651558226427\n",
+            "Pattern_Changer: 0.0007417442234557576\n",
+            "Forks: 0.0007260477201462021\n",
+            "Pad_Type: 0.0006964452986786723\n",
+            "Thumb: 0.0004898449974511266\n",
+            "Differential_Type: 0.0003846985113752833\n",
+            "Backhoe_Mounting: 0.0003797184640638157\n",
+            "Steering_Controls: 0.0002555412559460477\n",
+            "Stick: 0.0002360923320143842\n",
+            "Turbocharged: 0.00021644423556873224\n"
           ]
         }
       ]
