--- a/Colab_version.ipynb
+++ b/Colab_version.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6WyZ0DljeD7zANjHdL4yT",
+      "authorship_tag": "ABX9TyPUfWhBFyohFOTwiquNjt8n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMjKdkHdlpDo",
-        "outputId": "19b60e8d-1c0b-4b7c-a5c3-fbfcd69806ab"
+        "outputId": "e592e696-f008-47d0-a2b7-662815944f02"
       },
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading...\n",
+            "From (original): https://drive.google.com/uc?id=1guqSpDv1Q7ZZjSbXMYGbrTvGns0VCyU5\n",
+            "From (redirected): https://drive.google.com/uc?id=1guqSpDv1Q7ZZjSbXMYGbrTvGns0VCyU5&confirm=t&uuid=ee4530b2-1a7a-4756-b980-54cff6c44b49\n",
+            "To: /content/train.csv\n",
+            "100%|██████████| 116M/116M [00:01<00:00, 59.6MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "File 'train.csv' already exists. Skipping download.\n",
-            "File 'valid.csv' already exists. Skipping download.\n"
+            "File downloaded as: train.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1j7x8xhMimKbvW62D-XeDfuRyj9ia636q\n",
+            "To: /content/valid.csv\n",
+            "100%|██████████| 3.32M/3.32M [00:00<00:00, 34.2MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File downloaded as: valid.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -120,7 +154,7 @@
       "metadata": {
         "id": "kOhM8hbAZ2Ko"
       },
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -214,7 +248,7 @@
       "metadata": {
         "id": "ju1gMoUpbq2b"
       },
-      "execution_count": 78,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -225,20 +259,141 @@
       ],
       "metadata": {
         "id": "KE2pPmGchFHY",
-        "outputId": "492e022f-80fd-46e8-a48a-12a34b21970f",
+        "outputId": "f9eedb3f-a4a1-4b2d-f718-a692de58ad19",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-79-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-6-6adbd7aebcbe>:1: DtypeWarning: Columns (13,39,40,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('train.csv')\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get df columns datatypes\n",
+        "\n",
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "TXGw8hntWGlm",
+        "outputId": "807fe612-d45d-411b-b801-05fe18e4489a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SalesID                       int64\n",
+              "SalePrice                     int64\n",
+              "MachineID                     int64\n",
+              "ModelID                       int64\n",
+              "datasource                    int64\n",
+              "auctioneerID                float64\n",
+              "YearMade                      int64\n",
+              "MachineHoursCurrentMeter    float64\n",
+              "UsageBand                    object\n",
+              "saledate                     object\n",
+              "fiModelDesc                  object\n",
+              "fiBaseModel                  object\n",
+              "fiSecondaryDesc              object\n",
+              "fiModelSeries                object\n",
+              "fiModelDescriptor            object\n",
+              "ProductSize                  object\n",
+              "fiProductClassDesc           object\n",
+              "state                        object\n",
+              "ProductGroup                 object\n",
+              "ProductGroupDesc             object\n",
+              "Drive_System                 object\n",
+              "Enclosure                    object\n",
+              "Forks                        object\n",
+              "Pad_Type                     object\n",
+              "Ride_Control                 object\n",
+              "Stick                        object\n",
+              "Transmission                 object\n",
+              "Turbocharged                 object\n",
+              "Blade_Extension              object\n",
+              "Blade_Width                  object\n",
+              "Enclosure_Type               object\n",
+              "Engine_Horsepower            object\n",
+              "Hydraulics                   object\n",
+              "Pushblock                    object\n",
+              "Ripper                       object\n",
+              "Scarifier                    object\n",
+              "Tip_Control                  object\n",
+              "Tire_Size                    object\n",
+              "Coupler                      object\n",
+              "Coupler_System               object\n",
+              "Grouser_Tracks               object\n",
+              "Hydraulics_Flow              object\n",
+              "Track_Type                   object\n",
+              "Undercarriage_Pad_Width      object\n",
+              "Stick_Length                 object\n",
+              "Thumb                        object\n",
+              "Pattern_Changer              object\n",
+              "Grouser_Type                 object\n",
+              "Backhoe_Mounting             object\n",
+              "Blade_Type                   object\n",
+              "Travel_Controls              object\n",
+              "Differential_Type            object\n",
+              "Steering_Controls            object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# drop bad columns\n",
+        "\n",
+        "df.drop(['MachineHoursLeft'], axis=1, inplace=True)\n",
+        "df_valid.drop(['MachineHoursLeft'], axis=1, inplace=True)"
+      ],
+      "metadata": {
+        "id": "XYPGRHLuWWl8",
+        "outputId": "76811ba8-ea60-446d-95c2-ffd689ed6ad6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['UsageBand', 'saledate', 'fiModelDesc', 'fiBaseModel',\n",
+              "       'fiSecondaryDesc', 'fiModelSeries', 'fiModelDescriptor', 'ProductSize',\n",
+              "       'fiProductClassDesc', 'state', 'ProductGroup', 'ProductGroupDesc',\n",
+              "       'Drive_System', 'Enclosure', 'Forks', 'Pad_Type', 'Ride_Control',\n",
+              "       'Stick', 'Transmission', 'Turbocharged', 'Blade_Extension',\n",
+              "       'Blade_Width', 'Enclosure_Type', 'Engine_Horsepower', 'Hydraulics',\n",
+              "       'Pushblock', 'Ripper', 'Scarifier', 'Tip_Control', 'Tire_Size',\n",
+              "       'Coupler', 'Coupler_System', 'Grouser_Tracks', 'Hydraulics_Flow',\n",
+              "       'Track_Type', 'Undercarriage_Pad_Width', 'Stick_Length', 'Thumb',\n",
+              "       'Pattern_Changer', 'Grouser_Type', 'Backhoe_Mounting', 'Blade_Type',\n",
+              "       'Travel_Controls', 'Differential_Type', 'Steering_Controls'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -368,9 +523,9 @@
         "\"\"\" Use replace_outliers function in order to replace outliers\n",
         "in the 'Age' column using statistics_df and mean method \"\"\"\n",
         "\n",
-        "X_train = replace_outliers(X_train, 'Age', 'mean', statistics_df)\n",
-        "X_test = replace_outliers(X_test, 'Age', 'mean', statistics_df)\n",
-        "df_valid = replace_outliers(df_valid, 'Age', 'mean', statistics_df)"
+        "X_train = replace_outliers(X_train, 'Age', 'mean_without_extremes', statistics_df)\n",
+        "X_test = replace_outliers(X_test, 'Age', 'mean_without_extremes', statistics_df)\n",
+        "df_valid = replace_outliers(df_valid, 'Age', 'mean_without_extremes', statistics_df)"
       ],
       "metadata": {
         "id": "q6y9pX3XJ9ED"
